# scoutnet2airkey

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  scoutnet2airkey.example.toml  scoutnet2airkey.example.yaml  scoutnet2airkey.py
client/: Makefile  codegen-config.json
