[tool.poetry]
name = "scoutnet2airkey"
version = "0.0.0"
description = "Scoutnet EVVA Airkey integration"
authors = ["Jakob Schlyter <jakob@schlyter.se>"]
license = "BSD-2-Clause"
repository = "https://github.com/jschlyter/scoutnet2airkey"

[tool.poetry.dependencies]
python = "^3.11"
scoutnet = {git = "https://github.com/jschlyter/python-scoutnet.git", rev = "main"}
airkey = {git = "https://github.com/jschlyter/python-airkey.git", rev = "main"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scoutnet2airkey = "scoutnet2airkey:main"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "I001", "SIM102"]
exclude = ["examples/*"]

[tool.ruff.lint.isort]
combine-as-imports = true
