[project]
name = "scoutnet2airkey"
dynamic = ["version"]
description = "Scoutnet EVVA Airkey integration"
authors = [{name="Jakob Schlyter", email = "jakob@schlyter.se"}]
license = "BSD-2-Clause"
requires-python = ">=3.13,<4.0"
dependencies = [
    "airkey",
    "scoutnet",
]

[project.urls]
repository = "https://github.com/jschlyter/scoutnet2airkey"

[project.scripts]
scoutnet2airkey = "scoutnet2airkey:main"

[tool.uv.sources]
scoutnet = {git = "https://github.com/jschlyter/python-scoutnet.git", branch = "main" }
airkey = {git = "https://github.com/jschlyter/python-airkey.git" }

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "I001", "SIM102"]
exclude = ["examples/*"]

[tool.ruff.lint.isort]
combine-as-imports = true
